new endpoint getUsers
